- Create CitiesDataSource and Impl for providing data from json file - Create the repository implementation (CitiesRepositoryImpl.kt) - Create the CitiesRepositoryImplTest.kt to test the logic of the repository